2 hours worth of work >.<

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -7,10 +8,20 @@
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
   <body>
+    <h1>5280 Landmarks
+      <p id="login">Login</p>
+    </h1>
+
+
+    <h2 class="span-container">
+    <span id="building">Buildings</span>
+    <span id="art">Art</span>
+    <span id="featured">Featured</span>
+    </h2>
+
+    <div id="dam">
+      <img src="1.jpg" alt="Denver Art Museum"
+    </div>
 
   </body>
 </html>
-
-
-
-
